# report-cli

./: .gitignore  DOC.md  LICENSE  MANIFEST.in  PYPI_PUBLISH_PLAN.md  README.md  README_zh.md  SKILL.md  index.html  meta.json  pyproject.toml  report
.claude/skills/report-cli/: SKILL.md
.claude/skills/report-cli-simple/: SKILL.md
src/eastmoney/: __init__.py  cli.py  report_client.py
